# cross-chain-swap

./: .gitignore  Cargo.toml  README.md  build-and-start-network.sh
contracts/cw-ics20-swap/: Cargo.toml  README.md
contracts/cw-ics20-swap/schema/: channel_info.json  channel_response.json  channel_state.json  config.json  config_response.json  execute_msg.json  query_msg.json  reply_args.json
contracts/cw-ics20-swap/src/: error.rs  ibc.rs  ibc_msg.rs  lib.rs  parse.rs  state.rs  test_helpers.rs
scripts/: build_contract.sh  contract_deploy.sh  schema.sh
scripts/contract-interaction/: list-channels.sh  transfer-cross-chain.sh  vars.sh
scripts/network/: Dockerfile.juno  Dockerfile.osmosis  Dockerfile.relayer  build-network.sh  docker-compose.yml  init-chain.sh  relayer-sc-config.yaml  setup-sc-relayer.sh  start-network.sh  vars.sh
