[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
version    = "0.0.1"
edition    = "2021"
homepage   = "https://github.com/notional-labs"
repository = "https://github.com/notional-labs/cross-chain-swap"
license    = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema   = "1.1.5"
cosmwasm-std      = "1.1.5"
cw2               = "0.16.0"
cw-storage-plus   = "0.16.0"
cw-utils          = "0.16.0"
schemars          = "0.8.8"
serde             = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror         = "1.0.31"
url               = "2.2.2"
cw-multi-test     = "0.16.0"
prost             = "0.11.2"
prost-types       = "0.11.2"

[profile.release.package.osmo-proto]
codegen-units = 1
incremental = false

[profile.release.package.cw-ics20-swap]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false